// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders container 1`] = `
.c0 {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: var(--acrool-gutter-x, 0.75rem);
  padding-left: var(--acrool-gutter-x, 0.75rem);
}

@media (min-width: 576px) {
  .c0 {
    max-width: var(--acrool-container-max-width-sm, 540px);
  }
}

@media (min-width: 768px) {
  .c0 {
    max-width: var(--acrool-container-max-width-md, 720px);
  }
}

@media (min-width: 992px) {
  .c0 {
    max-width: var(--acrool-container-max-width-lg, 960px);
  }
}

@media (min-width: 1200px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xl, 1140px);
  }
}

@media (min-width: 1540px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xxl, 1540px);
  }
}

<div
  class="c0"
  data-grid="container"
>
  container
</div>
`;

exports[`Container renders container fluid 1`] = `
.c0 {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: var(--acrool-gutter-x, 0.75rem);
  padding-left: var(--acrool-gutter-x, 0.75rem);
}

<div
  class="c0"
  data-grid="container-fluid"
>
  container fluid
</div>
`;

exports[`Container renders container fluid="lg" 1`] = `
.c0 {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: var(--acrool-gutter-x, 0.75rem);
  padding-left: var(--acrool-gutter-x, 0.75rem);
}

@media (min-width: 992px) {
  .c0 {
    max-width: var(--acrool-container-max-width-lg, 960px);
  }
}

@media (min-width: 1200px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xl, 1140px);
  }
}

@media (min-width: 1540px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xxl, 1540px);
  }
}

<div
  class="c0"
  data-grid="container-lg"
>
  container-lg
</div>
`;

exports[`Container renders container fluid="md" 1`] = `
.c0 {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: var(--acrool-gutter-x, 0.75rem);
  padding-left: var(--acrool-gutter-x, 0.75rem);
}

@media (min-width: 768px) {
  .c0 {
    max-width: var(--acrool-container-max-width-md, 720px);
  }
}

@media (min-width: 992px) {
  .c0 {
    max-width: var(--acrool-container-max-width-lg, 960px);
  }
}

@media (min-width: 1200px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xl, 1140px);
  }
}

@media (min-width: 1540px) {
  .c0 {
    max-width: var(--acrool-container-max-width-xxl, 1540px);
  }
}

<div
  class="c0"
  data-grid="container-md"
>
  container-md
</div>
`;
